update preview image for headline expanded

--- a/_posts/headline-expanded/headline-expanded.Rmd
+++ b/_posts/headline-expanded/headline-expanded.Rmd
@@ -2,7 +2,7 @@
 title: "Analysis of Main vs. Print Headlines: Phase 2"
 description: |
   Text as Data Project Headline Comparison Research Using API Query "Afghanistan"
-preview: 0000010.png
+preview: 000010.png
 categories:
   - text as data
   - NYT text analysis project
