--- a/_posts/new-lexicon/new-lexicon.Rmd
+++ b/_posts/new-lexicon/new-lexicon.Rmd
@@ -24,6 +24,12 @@ knitr::opts_chunk$set(echo = FALSE)
 
 # Using New Dictionaries
 
+This time, my analysis will be through a different process of analysis than I used in my first two analyses.
+
+This anaysis will use an alternative sequence to analyze a different set of three sentiment datasets within the "tidytext" package. 
+
+The dictionaries are "bing", "nrc", (which I used previously) and "AFINN".
+
 ```{r include=FALSE}
 # load libraries
 
@@ -45,9 +51,7 @@ library(stringr)
 library(tidyr)
 library(widyr)
 library(ggplot2)
-
 suppressWarnings(expr)
-
 ```
 
 ## Load Data
@@ -63,8 +67,11 @@ print_headlines <- read.csv("afghanistan_headlines_print.csv")
 print_headlines <- as.data.frame(print_headlines)
 ```
 
-### Bing Lexicon
+## Bing Lexicon
 
+The bing lexicon sorts words into positive or negative positions.
+
+First I'll create tokens for the main and print headlines.
 
 ```{r code_folding = TRUE, message=FALSE}
 #create tokens without stop words for main headlines
@@ -72,12 +79,17 @@ tkn_l_main <- apply(main_headlines, 1, function(x) { data.frame(text=x, stringsA
 main_news_tokens <- lapply(tkn_l_main, function(x) {anti_join(x, stop_words)})
 str(main_news_tokens, list.len = 5)
 main_news_tokens[[1]]
+
 #create tokens without stop words for print headlines
 tkn_l_print <- apply(print_headlines, 1, function(x) { data.frame(text=x, stringsAsFactors = FALSE) %>% unnest_tokens(word, text)})
 print_news_tokens <- lapply(tkn_l_print, function(x) {anti_join(x, stop_words)})
 str(print_news_tokens, list.len = 5)
 print_news_tokens[[1]]
 ```
+
+### Create Function
+
+I need to next create a function to assign sentiment labels.
 
 ```{r code_folding = TRUE}
 compute_sentiment <- function(d) {
@@ -90,10 +102,13 @@ compute_sentiment <- function(d) {
 } 
 ```
 
+### Apply Sentiments and Function
+
+Then I can apply that sentiment function to the headline data sets
+
 ```{r code_folding = TRUE, message=FALSE}
 
 sentiments_bing <- get_sentiments("bing")
-str(sentiments_bing)
 
 #apply sentiment to main headlines
 main_news_sentiment_bing <- sapply(main_news_tokens, function(x) { x %>% inner_join(sentiments_bing) %>% compute_sentiment()})
@@ -101,29 +116,41 @@ main_news_sentiment_bing <- sapply(main_news_tokens, function(x) { x %>% inner_j
 print_news_sentiment_bing <- sapply(print_news_tokens, function(x) { x %>% inner_join(sentiments_bing) %>% compute_sentiment()})
 ```
 
-```{r code_folding = TRUE, message=FALSE}
-str(main_news_sentiment_bing)
-str(print_news_sentiment_bing)
-```
+### Summary
+
+The summaries of each show the number of NA's are minimal.
 
 ```{r code_folding = TRUE, message=FALSE}
 summary(main_news_sentiment_bing)
 summary(print_news_sentiment_bing)
 ```
 
+### Preview Results
+
+Now I can look at the first 10 headlines and the corresponding bing analysis scores. I can see that the scores vary, even in the first 10 headlines.
+
 ```{r code_folding = TRUE, message=FALSE}
+#head 10 main headlines with bing analysis scores
 main_news_sentiment_bing_df <- data.frame(main_text=main_headlines$text, score = main_news_sentiment_bing)
 head(main_news_sentiment_bing_df, 10)
+
+#head 10 print headlines with bing analysis scores
 print_news_sentiment_bing_df <- data.frame(print_text=print_headlines$text, score = print_news_sentiment_bing)
 head(print_news_sentiment_bing_df, 10)
 ```
 
-### NRC
+## NRC
+
+As I saw in my first two analyses, the NRC lexicon uses 10 different sentiments, including negative and positive but with additional sentiments as well.
 
 ```{r code_folding = TRUE, message=FALSE}
 sentiments_nrc <- get_sentiments("nrc")
 (unique_sentiments_nrc <- unique(sentiments_nrc$sentiment))
 ```
+
+### Create Function
+
+Next again I will create a function to assign sentiment labels that apply 'positive' and 'negative' in a binary interpretation of each of the 8 other sentiments.
 
 ```{r code_folding = TRUE, message=FALSE}
 compute_pos_neg_sentiments_nrc <- function(the_sentiments_nrc) {
@@ -140,40 +167,71 @@ compute_pos_neg_sentiments_nrc <- function(the_sentiments_nrc) {
 nrc_sentiments_pos_neg_scale <- compute_pos_neg_sentiments_nrc(sentiments_nrc)
 ```
 
+### Apply Function
+
+Then I can apply that sentiment function to the headline data sets
+
 ```{r code_folding = TRUE, message=FALSE}
 #calculating NRC sentiment for main headlines
 main_news_sentiment_nrc <- sapply(main_news_tokens, function(x) { x %>% inner_join(nrc_sentiments_pos_neg_scale) %>% compute_sentiment()})
-str(main_news_sentiment_nrc)
 
 #calculating NRC sentiment for print headlines
 print_news_sentiment_nrc <- sapply(print_news_tokens, function(x) { x %>% inner_join(nrc_sentiments_pos_neg_scale) %>% compute_sentiment()})
-str(print_news_sentiment_nrc)
-
 ```
 
+### Summary
 
+The summaries of each show the number of NA's are even more minimal.
+
+```{r code_folding = TRUE, message=FALSE}
+summary(main_news_sentiment_nrc)
+summary(print_news_sentiment_nrc)
+```
+
+### Preview Results
+
+Now I can look at the first 10 headlines and the corresponding NRC analysis scores. I can see that the scores vary as well, even in the first 10 headlines.
 
 ```{r code_folding = TRUE, message=FALSE}
 #data frame of main NRC sentiment
-summary(main_news_sentiment_nrc)
 main_news_sentiment_nrc_df <- data.frame(main_text=main_headlines$text, score = main_news_sentiment_nrc)
 head(main_news_sentiment_nrc_df, 10)
 
 #data frame of print NRC sentiment
-summary(print_news_sentiment_nrc)
 print_news_sentiment_nrc_df <- data.frame(print_text=print_headlines$text, score = print_news_sentiment_nrc)
 head(print_news_sentiment_nrc_df, 10)
-
 ```
 
-### AFINN
+### Visualization
+
+```{r code_folding = TRUE, message=FALSE}
+#transpose
+td<-data.frame(t(d))
+#The function rowSums computes column sums across rows for each level of a grouping variable.
+td_new <- data.frame(rowSums(td[2:253]))
+#Transformation and cleaning
+names(td_new)[1] <- "count"
+td_new <- cbind("sentiment" = rownames(td_new), td_new)
+rownames(td_new) <- NULL
+td_new2<-td_new[1:8,]
+#Plot One - count of words associated with each sentiment
+quickplot(sentiment, data=td_new2, weight=count, geom="bar", fill=sentiment, ylab="count")+ggtitle("Survey sentiments")
+You can see the bar plot in Figure 11.
+```
+
+## AFINN
+
+The AFINN lexicon has valence ratings between -5 (negative) and +5 (positive).
 
 ```{r code_folding = TRUE, message=FALSE}
 sentiments_afinn <- get_sentiments("afinn")
 
 colnames(sentiments_afinn) <- c("word", "sentiment")
-str(sentiments_afinn)
 ```
+
+### Create Function
+
+Again I'll create a function to assign sentiment labels.
 
 ```{r echo=TRUE, message=FALSE}
 #applying AFINN sentiment to main headlines
@@ -181,35 +239,45 @@ main_news_sentiment_afinn_df <- lapply(main_news_tokens, function(x) { x %>% inn
 main_news_sentiment_afinn <- sapply(main_news_sentiment_afinn_df, function(x) { 
       ifelse(nrow(x) > 0, sum(x$sentiment), NA)
   })
-str(main_news_sentiment_afinn)
 #applying AFINN sentiment to print headlines
 print_news_sentiment_afinn_df <- lapply(print_news_tokens, function(x) { x %>% inner_join(sentiments_afinn)})
 print_news_sentiment_afinn <- sapply(print_news_sentiment_afinn_df, function(x) { 
       ifelse(nrow(x) > 0, sum(x$sentiment), NA)
   })
-str(print_news_sentiment_afinn)
-
 ```
 
+### Summary
+
+The summaries of each show the number of NA's are similar to that in the bing lexicon. 
+
+```{r code_folding = TRUE, message=FALSE}
+summary(main_news_sentiment_afinn)
+summary(print_news_sentiment_afinn)
+```
+
+### Preview Results
+
+Now I can look at the first 10 headlines and the corresponding AFINN analysis scores. I can see that the scores vary a lot less than in the first two lexicons.
 
 ```{r code_folding = TRUE, message=FALSE}
 #data frame of AFINN main headlines
-summary(main_news_sentiment_afinn)
 main_news_sentiment_afinn_df <- data.frame(main_text=main_headlines$text, score = main_news_sentiment_afinn)
 head(main_news_sentiment_afinn_df, 10)
+
 #data frame of AFINN print headlines
-summary(print_news_sentiment_afinn)
 print_news_sentiment_afinn_df <- data.frame(print_text=print_headlines$text, score = print_news_sentiment_afinn)
 head(print_news_sentiment_afinn_df, 10)
 ```
 
+## Congruence
 
-### Comparing Results
+Having obtained for each headline data set three potential results as sentiment evaluation, next I will calculate their congruence.
 
-Having obtained for each news three potential results as sentiment evaluation, we would like to compare their congruency.
-As congruence we mean the fact that all three lexicons express the same positive or negative result, in other words the same score sign indipendently from its magnitude. If NA values are present, the congruence shall be computed until at least two non NA values are available, otherwise is equal to NA.
+By congruence, I am looking at the fact that all three lexicons express a positive or negative result. In other words, the same score signal the same sentiment independently from the lexicon's respective scale of magnitude. If "NA" values are present, the congruence is computed until at least two non-"NA" values are available, otherwise the value is equal to "NA".
 
-Furthermore we compute the final news sentiment as based upon the sum of each lexicon sentiment score.
+Then, I compute the final news sentiment as based upon the sum of each lexicon sentiment score.
+
+### Create Function
 
 ```{r code_folding = TRUE, message=FALSE}
 compute_congruence <- function(x,y,z) {
@@ -239,18 +307,11 @@ compute_final_sentiment <- function(x,y,z) {
 }
 ```
 
+### Apply Function
+
+Now I will put the sentiment results in new data frames and apply the analyses.
 
 ```{r code_folding = TRUE, message=FALSE}
-
-all_sentiments_results <- data.frame(main_text = main_headlines$text, 
-                                 main_bing = main_news_sentiment_bing, 
-                                 main_nrc = main_news_sentiment_nrc, 
-                                 main_afinn = main_news_sentiment_afinn,
-                                 print_text = print_headlines$text, 
-                                 print_bing = print_news_sentiment_bing, 
-                                 print_nrc = print_news_sentiment_nrc, 
-                                 print_afinn = print_news_sentiment_afinn,
-                                 stringsAsFactors = FALSE)
 
 main_sentiments_results <- data.frame(main_text = main_headlines$text, 
                                  bing_score = main_news_sentiment_bing, 
@@ -278,6 +339,10 @@ head(print_sentiments_results, 10)
 
 ```
 
+### Evaluation
+
+It seems like I need to do more work on the congruence function, as I have all "NA" results.
+
 ```{r code_folding = TRUE, message=FALSE}
 #If it would be useful to replace the numeric score with same {negative, neutral, positive} scale.
 replace_score_with_sentiment <- function(v_score) {
@@ -286,12 +351,18 @@ replace_score_with_sentiment <- function(v_score) {
   v_score[v_score == 0] <- "neutral"
   v_score
 } 
+```
+
+I'll combine all of the normalized and binary 'positive' and 'negative' sentiments from all three lexicons into one data frame for each headline set.
+
+```{r code_folding=TRUE}
 #apply scale to main results
 main_sentiments_results$bing_score <- replace_score_with_sentiment(main_sentiments_results$bing_score)
 main_sentiments_results$nrc_score <- replace_score_with_sentiment(main_sentiments_results$nrc_score)
 main_sentiments_results$afinn_score <- replace_score_with_sentiment(main_sentiments_results$afinn_score)
 main_sentiments_results[,2:5] <- lapply(main_sentiments_results[,2:5], as.factor)
 head(main_sentiments_results, 40)
+
 #apply scale to print results
 print_sentiments_results$bing_score <- replace_score_with_sentiment(print_sentiments_results$bing_score)
 print_sentiments_results$nrc_score <- replace_score_with_sentiment(print_sentiments_results$nrc_score)
@@ -299,14 +370,45 @@ print_sentiments_results$afinn_score <- replace_score_with_sentiment(print_senti
 print_sentiments_results[,2:5] <- lapply(print_sentiments_results[,2:5], as.factor)
 head(print_sentiments_results, 40)
 
+
 ```
-#### Final Results
+
+### Final Results
+
+I'll take the overall sentiment score and join them in one data frame and visualize it. After taking the value 'positive' or 'negative' that is in the majority of the 3 evaluations, the dataset is overwhelmingly 'negative' (100%).
 
 ```{r code_folding = TRUE, message=FALSE}
-table(main_sentiments_results$congruence, main_sentiments_results$final_sentiment, dnn = c("congruence", "final"))
-table(print_sentiments_results$congruence, print_sentiments_results$final_sentiment, dnn = c("congruence", "final"))
+
+final_total <- read.csv("all_sentiments_binary.csv")
+
+head(final_total)
 ```
 
+## Visualization
+
+```{r code_folding = TRUE, message=FALSE}
+
+#created matrix of tallies from this function for each test
+#print_bing <- final_total %>%
+        #group_by(print_bing) %>%
+        #tally()
+gg_data <- read.csv("gg_data2.csv")
+
+theme_set(theme_classic())
+
+# Histogram on a Categorical variable
+ggplot(gg_data, aes(x=sentiment, fill = dictionary, stat_count(n))) +
+  geom_col() +
+  facet_wrap(~headlines)
+
+df %>% tidyr::gather("id", "value", 1:4) %>% 
+  ggplot(., aes(Xax, value))+
+  geom_point()+
+  geom_smooth(method = "lm", se=FALSE, color="black")+
+  facet_wrap(~id)
+
+
+```
 
 
 
@@ -381,4 +483,14 @@ parsed_print <- spacy_parse(print_headlines,
 head(parsed_print)
 summary(parsed_print)
 ```
+
+# Citations
+
+Citations:
+
+* This research makes use of the [NRC Word-Emotion Association Lexicon](http://saifmohammad.com/WebPages/NRC-Emotion-Lexicon.htm), created by Saif Mohammad and Peter Turney at the National Research Council Canada. 
+
+* This research makes use of the [Bing Lexicon](https://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html). This dataset was first published in Minqing Hu and Bing Liu, ``Mining and summarizing customer reviews.'', Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery & Data Mining (KDD-2004), 2004.
+
+* This research makes use of the [AFINN Lexicon](http://www2.compute.dtu.dk/pubdb/pubs/6010-full.html), Nielsen, F. Å. (2011). A new ANEW: Evaluation of a word list for sentiment analysis in microblogs. arXiv preprint arXiv:1103.2903.
 
